# Math-Modeling-Solver

./: .gitattributes  .gitignore  .skill-watermark.json  LICENSE  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
audit-modeling-evidence/: SKILL.md
benchmarks/: blind-pilot-baseline.json  blind-pilot-rubric.json  blind-pilot-suite.json  blind-response-template.json
build-modeling-figures/: SKILL.md
deliver-cumcm-paper/: SKILL.md
references/: advanced-model-combinations.md  ai-prompt-patterns.md  algorithm-library.md  algorithm-templates.md  blind-benchmarking.md  candidate-validation-contract.md  competition-timeline.md  cumcm-2026-latex.md  data-and-reproducibility.md  evidence-gated-workflow.md  evidence-registry-contract.md  experiment-budget-and-promotion.md  failure-to-method-router.md  figure-qa-checklist.md  matlab-native-workflow.md  model-catalog.md  model-routing-rules.json  model-selection.md  modeling-figure-workflow.md  paper-writing.md  problem-triage.md  standard-workflow.md  task-family-router.md  validation-playbook.md  when-to-upgrade-model-complexity.md  word-omml-delivery.md
scripts/: audit_candidate_evidence.py  audit_cumcm_latex.py  audit_dataset.py  audit_decision_trace.py  audit_modeling_project.py  audit_word_delivery.py  blind_modeling_benchmark.py  build_cumcm_latex.py  build_modeling_diagram.py  check_transition_fidelity.py  init_modeling_project.py  install_skill_pack.py  promote_validated_candidate.py  provenance_watermark.py  register_experiment.py  render_frozen_results.py  resolve_required_gates.py  run_experiment.py  (+1 more)
(+94 files in other folders)
