[project]
name = "math-modeling-solver-toolkit"
version = "2.2.0"
description = "Runtime dependencies for the Math Modeling Solver Skill pack"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "openpyxl>=3.1",
  "pandas>=2.1",
  "pillow>=10",
  "scipy>=1.11",
  "xlrd>=2.0",
]

[dependency-groups]
dev = [
  "pyyaml>=6.0",
]

[tool.uv]
package = false
